--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "array": "cpp",
         "string": "cpp",
         "string_view": "cpp",
-        "*.h++": "cpp"
+        "*.h++": "cpp",
+        "optional": "cpp"
     }
 }
